--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,11 @@ yarnMappings=1.19.3+build.5
 loaderVersion=0.14.12
 # Fabric API
 fabricVersion=0.72.0+1.19.3
-loomVersion=0.12-SNAPSHOT
+loomVersion=1.0.17
 # Mod Properties
-modVersion=0.0.1
+modVersion=2023.1.1
 mavenGroup=dev.syoritohatsuki
-archivesBaseName=mod-template
+archivesBaseName=yacg
 # Kotlin
 systemProp.kotlinVersion=1.8.0
 fabricKotlinVersion=1.9.0+kotlin.1.8.0
