--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ archivesBaseName=yacg
 systemProp.kotlinVersion=1.8.0
 fabricKotlinVersion=1.9.0+kotlin.1.8.0
 emiVersion=1.0.5+1.20.1
+jadeVersion=lcQiLHVM
