--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # IDE
 kotlin.code.style=official
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.warning.mode=all
 # Check these on https://fabricmc.net/develop/
 minecraftVersion=1.20
@@ -18,3 +18,4 @@ systemProp.kotlinVersion=1.8.0
 fabricKotlinVersion=1.9.0+kotlin.1.8.0
 emiVersion=1.0.5+1.20.1
 jadeVersion=lcQiLHVM
+reiVersion=12.0.625
