--- a/gradle.properties
+++ b/gradle.properties
@@ -10,12 +10,13 @@ loaderVersion=0.14.21
 fabricVersion=0.83.0+1.20
 loomVersion=1.2-SNAPSHOT
 # Mod Properties
-modVersion=2023.6.2
+modVersion=2023.7.1
 mavenGroup=dev.syoritohatsuki
 archivesBaseName=yacg
 # Kotlin
 systemProp.kotlinVersion=1.8.0
 fabricKotlinVersion=1.9.0+kotlin.1.8.0
+# Dependencies
 emiVersion=1.0.5+1.20.1
 jadeVersion=lcQiLHVM
 reiVersion=12.0.625
