--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,11 @@ loaderVersion=0.14.19
 fabricVersion=0.76.0+1.19.2
 loomVersion=1.2-SNAPSHOT
 # Mod Properties
-modVersion=2023.5.1
+modVersion=2023.7.1
 mavenGroup=dev.syoritohatsuki
 archivesBaseName=yacg
 # Kotlin
 systemProp.kotlinVersion=1.8.0
 fabricKotlinVersion=1.9.0+kotlin.1.8.0
+emiVersion=1.0.6+1.19.2
+jadeVersion=8.7.3
